--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -4,9 +4,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.75rem 0rem;
 }
 
-.footer .social{
+.footer .social {
+  text-align: center;
+}
+
+.footer .resume {
   text-align: center;
 }
 @media only screen and (max-width: 576px) {
@@ -17,5 +22,4 @@
   .footer .resume {
     margin: 20px 0px;
   }
-  
 }
