--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -9,16 +9,23 @@
 }
 
 .about__section .about__img_wrapper {
-  text-align: center;
-}
-
-.about__section .about__img {
+  margin: auto;
+  max-width: 350px;
+  max-height: 380px;
+  overflow: hidden;
   border-radius: 1rem;
   border: 2px solid #fafafa21 !important;
 }
+
+.about__section .about__img {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+}
 .about__section .about__img:hover {
-  transform: scale(1.5);
+  transform: scale(1.2);
   transition: all 1s;
+  filter: grayscale(25%);
 }
 
 @media only screen and (max-width: 900px) {
