--- a/styles/portfolio.module.css
+++ b/styles/portfolio.module.css
@@ -14,6 +14,9 @@
   border-top: 1px solid #111a28;
   padding: 0.8rem 0.6rem;
 }
+.card .cardMedia {
+  min-height: 200px;
+}
 .card .cardActions .btn {
   color: var(--text);
 }
