--- a/styles/common.module.css
+++ b/styles/common.module.css
@@ -9,6 +9,7 @@
   display: inline-block;
   padding: 0.5rem;
   border-radius: 0.5rem;
+  font-size: 2em;
 }
 .title .title1 {
   background: var(--front);
